syntax = "proto3";

package serv.sites;

service SitesService {
  rpc CreateSite(CreateSiteRequest) returns (CreateSiteResponse){}
  rpc GetSite(GetSiteRequest) returns (GetSiteResponse) {}
  rpc getSiteList(GetSiteListRequest) returns (GetSiteListResponse) {}
}

enum SiteStatus {
  INACTIVE = 0;
  DEPLOYED = 1;
  PENDING = 2;
  SUSPENDED = 3;
}

message Site {
  string id = 1;
  string name = 2;
  string createdBy = 3;
  string updatedBy = 4;
  string ownBy = 5;
  SiteStatus status = 6;
  optional string url = 7;
}

message CreateSiteRequest {
  string name = 1;
  string owner = 2;
  string requestedUser = 3;
  optional string logoUrl = 4;
  optional string faviconUrl = 5;
}

message CreateSiteResponse {
  string siteId = 1;
  SiteStatus status = 2;
}

message GetSiteRequest {
  string siteId = 1;
}

message GetSiteResponse {
  Site site = 1;
}

message GetSiteListRequest {
  oneof query {
    string ownBy = 1;
  }
}

message GetSiteListResponse {
  repeated Site sites = 1;
}
